# suitme-pro

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TEST_RESULTS.txt  config.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260420_0001_baseline.py
app/: main.py
app/api/: router.py
app/api/routes/: ai_test.py  (+12 more)
app/core/: config.py  database.py  defaults.py  deps.py  enums.py  exceptions.py  logger.py  request_utils.py  response.py  security.py  sqlalchemy_compat.py
app/models/: __init__.py  ai.py  base.py  category.py  customer.py  matching.py  oss_file.py  product.py  sys.py  tag.py
app/schemas/: auth.py  common.py
app/services/: ai_client.py  ai_test_service.py  auth_service.py  base.py  biz_support.py  category_service.py  common_service.py  customer_service.py  matching_service.py  oss_file_service.py  outfit_service.py  product_service.py  sys_menu_service.py  sys_role_service.py  sys_support.py  sys_user_service.py  tag_service.py
docs/: INDEX.md  route_inventory.json  route_inventory.md
docs/architecture/: 01-总体架构.md  02-目录与分层.md  03-请求链路与契约测试.md
docs/notes/: 01-PRD修订建议.md  02-仓库风险与注意事项.md  03-开发顺序建议.md  04-凭证与仓库操作说明.md  05-本轮更新说明.md
docs/prd/: 00-总览.md  01-范围与保留接口.md  02-接口兼容策略.md  03-鉴权与安全.md  04-业务模块拆分.md  05-系统管理拆分.md  06-外部集成.md  07-数据库与迁移.md  08-测试与切换.md
docs/references/: 01-原始PRD.md  02-仓库识别摘要.md
scripts/: inspect_db.py  print_routes.py
tests/: test_auth_toggle.py  test_docs_urls.py  test_matching_schema.py  test_outfit_customer_compat.py  test_route_inventory.py  test_security.py
